# malda-lending-fuzz

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md  foundry.toml  justfile
contracts/: foundry.toml  justfile  remappings.txt
contracts/src/: Roles.sol
contracts/src/Operator/: OperatorStorage.sol
contracts/src/blacklister/: Blacklister.sol
contracts/src/interfaces/: IBridge.sol  IGasFeesHelper.sol  IInterestRateModel.sol  IOperator.sol  IOracleOperator.sol  IRebalancer.sol  IRoles.sol  ImErc20Host.sol
contracts/src/libraries/: CommonLib.sol  SafeApprove.sol
contracts/src/mToken/: mToken.sol  mTokenConfiguration.sol  mTokenStorage.sol
contracts/src/oracles/: MixedPriceOracleV3.sol  MixedPriceOracleV4.sol
contracts/src/rebalancer/: Rebalancer.sol
contracts/src/rebalancer/bridges/: BaseBridge.sol
contracts/src/rewards/: RewardDistributor.sol
contracts/src/utils/: ExponentialNoError.sol
contracts/src/verifier/: ZkVerifier.sol
contracts/test/: MaldaTest.sol
contracts/test/crosschain/: CrossChainIntegration.t.sol
contracts/test/gateway/: GatewayWithdrawGasFeesPOC.t.sol
contracts/test/mocks/: Risc0VerifierMock.sol
contracts/test/rebalancer/: RebalancerTest.sol  RebalancerUnitTest.t.sol
crates/fuzz/: Cargo.toml
crates/fuzz/src/: sequencer_commitment_roundtrip.rs  signature_msg_collision.rs  validate_linea_env.rs
crates/guest/: Cargo.toml
crates/guest/src/: get_proof_data.rs
crates/malda_rs/src/: viewcalls.rs
crates/malda_rs/tests/: tests.rs
crates/malda_utils/: Cargo.toml
crates/malda_utils/src/: constants.rs  cryptography.rs  lib.rs  types.rs  validators.rs
crates/malda_utils/tests/: sequencer_verification.rs
crates/poc/: Cargo.toml
crates/poc/src/: main.rs
docs/: architecture.md  contest-details.md  docs.md  malda-lending-audit.md  sherlock-judging-rules.md  sherlock-report-template.md
findings/: 01.md  02-INVALID.md  03.md  04.md  05-INVALID.md  05.md  06.md  07.md  08-INVALID.md  08.md  09-INVALID.md  10.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: sequencer_commitment.rs  signature_commitment.rs
malda_rs/: Cargo.toml
malda_rs/src/: constants.rs  elfs_ids.rs  lib.rs
malda_rs/tests/: tests.rs
malda_utils/: Cargo.toml
malda_utils/src/: cryptography.rs
malda_utils/tests/: sequencer_verification.rs
notes/: CC04.md  ZK09.md  ZK12.md  ZK15.md  get_proof_data_call_input.md
scripts/: pyproject.toml  verify_sequencer_address.py
src/: Roles.sol
src/Operator/: Operator.sol  OperatorStorage.sol
src/blacklister/: Blacklister.sol
src/interest/: JumpRateModelV4.sol
src/interfaces/: IBlacklister.sol  IBridge.sol  IDefaultAdapter.sol  IInterestRateModel.sol  IOperator.sol  IOracleOperator.sol  IPauser.sol  IRebalancer.sol  IRewardDistributor.sol  IRoles.sol  ImErc20.sol  ImErc20Host.sol  ImToken.sol  ImTokenGateway.sol
src/libraries/: BytesLib.sol  CommonLib.sol  SafeApprove.sol  mTokenProofDecoderLib.sol
src/mToken/: BatchSubmitter.sol  mErc20.sol  mErc20Immutable.sol  mErc20Upgradable.sol  mToken.sol  mTokenConfiguration.sol  mTokenStorage.sol
src/mToken/extension/: mTokenGateway.sol
src/mToken/host/: mErc20Host.sol
src/migration/: IMigrator.sol  Migrator.sol
src/oracles/: MixedPriceOracleV3.sol  MixedPriceOracleV4.sol
src/oracles/gas/: DefaultGasHelper.sol
src/pauser/: Pauser.sol
src/rebalancer/: Rebalancer.sol
src/rebalancer/bridges/: AcrossBridge.sol  BaseBridge.sol  EverclearBridge.sol
src/rewards/: RewardDistributor.sol
src/utils/: ExponentialNoError.sol  WrapAndSupply.sol
src/verifier/: ZkVerifier.sol
test/: MaldaTest.sol
test/crosschain/: CrossChainIntegration.t.sol  CrossChainTest.sol
test/gateway/: GatewayInvariantTest.t.sol  GatewayTest.sol  GatewayUnitTest.t.sol
test/invariant/: Gateway.t.sol  GatewayInvariant.t.sol  IGatewayContext.sol
test/invariant/handlers/: GatewayHandler.sol  Handler.sol
test/mocks/: AssetMock.sol  ChainlinkFeedMock.sol
zk/: Cargo.toml
