[workspace]
resolver = "3"
members = ["fuzz", "malda_rs", "malda_utils"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-consensus = "1.0"
alloy-primitives = { version = "1.0", default-features = false, features = [
  "rlp",
  "serde",
  "std",
] }
alloy-rlp = "0.3.8"
alloy-sol-types = { version = "1.0" }
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"
eyre = "0.6.8"
hex = { version = "0.4" }
k256 = { version = "0.13.3", features = [
  "arithmetic",
  "ecdsa",
  "expose-field",
  "serde",
  "std",
] }
revm = { version = "25.0", default-features = false }
risc0-op-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.0" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.0" }
serde = { version = "1.0.143", features = ["derive"] }
snap = "1"
ssz_types = "0.11.0"

[patch.crates-io]
alloy = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.12" }

