[package]
name = "fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "sequencer_commitment"
path = "fuzz_targets/sequencer_commitment.rs"
test = false

[dependencies]
alloy-primitives = { workspace = true }
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = "0.4"
malda_utils = { path = "../malda_utils" }

