[package]
name = "malda_rs"
version.workspace = true
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bonsai-sdk = "1.2.4"
boundless-market = "0.10"
bytemuck = { version = "1.16" }
dotenvy = "0.15"
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
eyre = { workspace = true }
futures = "0.3"
hex = { workspace = true }
k256 = { workspace = true }
reqwest = { version = "0.12.4", features = ["json"] }
revm = { workspace = true }
risc0-op-steel = { workspace = true, features = ["host"] }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { version = "2.3.1", default-features = false, features = [
  "unstable",
] }
serde = { workspace = true }
snap = { workspace = true }
ssz_types = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

