[package]
name = "fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "sequencer_commitment"
path = "src/sequencer_commitment.rs"
test = false

[[bin]]
bench = false
doc = false
name = "sequencer_commitment_roundtrip"
path = "src/sequencer_commitment_roundtrip.rs"
test = false

[[bin]]
bench = false
doc = false
name = "signature_msg_collision"
path = "src/signature_msg_collision.rs"
test = false

[dependencies]
alloy-primitives = { workspace = true }
arbitrary = { version = "1.4.1", features = ["derive"] }
lazy_static = "1.5.0"
libfuzzer-sys = "0.4"
malda_utils = { path = "../malda_utils" }

